fix aligning: I was mixing with left and right :p

--- a/styles/default/style.css
+++ b/styles/default/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: red;
+  overflow: hidden;
 }
 
 #header {
@@ -9,9 +9,10 @@ body {
   z-index: 2;
   position: fixed;
   top: 0;
-  right: 0;
+  left: 0;
   overflow: hidden;
 }
+
 
 @media only screen and (max-width: 480px) {
     /* For mobile phones: */
@@ -23,12 +24,6 @@ body {
       position: relative;
     }
 
-}
-
-#wrapper {
-  position: absolute;
-  top: 10em;
-  right: 0;
 }
 
 #name, #family {
@@ -47,12 +42,6 @@ body {
 }
 
 #fullname:after {
-  /*
-  content: ".";
-   visibility: hidden;
-   display: block;
-   height: 0;
-   clear: both;*/
 }
 
 #photo {
@@ -75,9 +64,32 @@ body {
 }
 
 #content {
-  text-align: left;
+  position: fixed;
+  top: 10em;
+  left:0;
+
+  /*margin: 0em 1em 0em 0em;*/
 }
 
 #bio {
   float: right;
+}
+
+#exp {
+  background-color: red;
+  margin: .5em .5em .5em .5em;
+}
+
+.exp_element {
+  display:inline;
+}
+
+#educ {
+  background-color: blue;
+  margin: .5em .5em .5em .5em;
+}
+
+#pub {
+  background-color: yellow;
+  margin: .5em .5em .5em .5em;
 }
